@@ -1,4 +1,8 @@
 19.02.2022
+
+- [FIXED] Lyceum patch
+
+
 ===== Version 3 =====
 
 - [NEW] Botanist Guildmaster patch (improvement)
